--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 						<li><a href="https://www.facebook.com/dylan.bruton.5" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 						
 						<li><a href="https://github.com/MaximumCarnage" class="icon fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://dinklebergsite.wordpress.com/" class="icon fa-blogger"><span class="label">Email</span></a></li>
 					</ul>
 				</footer>
 				<!-- <nav id="nav">
