--- a/index.html
+++ b/index.html
@@ -99,10 +99,7 @@
 	    									<th>
 	    										<h4><a href ="https://github.com/Devoture/PirateVPirate">Unity:A Pirate's Duel</a></h4>
 	    									
-												<video width="420" height="340" controls>
- 											 		<source src="videos/PirateVPirate.mp4" type="video/mp4">
-											   		Your browser does not support the video tag.
-												</video>
+												<iframe src="https://www.youtube.com/embed/5SvfOXrvqss?ecver=2" width="420" height="340" ></iframe>
 												<p>A Pirates Duel was a group project I undertook with several classmates during a Peterborough Game Jam, and is a networked 1v1 pirate battle. The game takes place atop a ship in a pirate fleet, and requires the player to kill their opponent using slashes and blocks.</p>
 											</th>
 	    										<th><h4><a href= "https://github.com/MaximumCarnage/Toasted">Android:Get Toasted</a></h4>
