--- a/index.html
+++ b/index.html
@@ -155,11 +155,9 @@
 													</video><p>Very early in my Game Development Education, I attended the SemiAnnual Peterborough Game Jam. I was still unfamiliar with unity, yet was able to create a very solid recreation of the arcade classic Joust. At the time of first making it the main jousting mechanic was unfinished, yet enemies would be killed and new wave would spawn after they all died, incrementing score as they die. </p>
   												</th>
   												 <th>
-  													<h4><a href="https://github.com/MaximumCarnage/A.S.H">Unreal:A.S.H:Alien Survival Horror</a></h4>
-													<video width="420" height="340" controls>
-		 											 <source src="TestVid.mp4" type="video/mp4">
-													   Your browser does not support the video tag.
-													</video><p>When i completed my schools Unreal course the class engaged in a classwide project, in which i took a lead role. We designed and created a game that begins with the player finding and equipping survivors of a spaceship in a top down perspective, before switching to first person and defending the ship from waves of hostile aliens. While there are several incomplete features, most of the core mechanics and visiuals are in place.</p>
+  													<h4>Unity:Got The Touch</h4>
+  													<iframe src="https://www.youtube.com/embed/3clrsAo8wzk" width="420" height="340" ></iframe>
+													<p>During my internship for my eduction at TriOS, i worked for my collegue and teacher Richard Als,as well as another intern on a mobile title called Got The Touch. At present the game has yet to be released, yet soon will be launched on both android and IOS. The goal of the game is to keep up with the speed and tap corresponding circles that match what the game indicates. The game was an excellent title that i learned much from, serving as a crash course in the game development life cycle from design to post production</p>
   												</th> 
   											</tr>
   										</table>
