tweaking email setup

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 					<ul class="icons">
 						<li><a href="https://twitter.com/Darth_Dylan?lang=en" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="https://www.facebook.com/dylan.bruton.5" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						
 						<li><a href="https://github.com/MaximumCarnage" class="icon fa-github"><span class="label">Github</span></a></li>
 						<li><a href="https://dinklebergsite.wordpress.com/" class="icon fa-blogger"><span class="label">Email</span></a></li>
+						<li><a href="mailto:dylansbruton@gmail.com" class="icon fa fa-envelope"><span class="label">Email</span></a>
 					</ul>
 				</footer>
 			
