--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 			<section id="header">
 				<header>
 					<span class="image avatar"><img src="images/avatar.png" alt="" /></span>
-					<h1 id="logo"><a href="#">Dylan Bruton</a></h1>
-					<p>Gamer,Developer,Ancient Long Imprisoned Evil<br />
+					<h1 id="logo"><a href="#">Danielle Bruton</a></h1>
+					<p>Gamer,Transgender,Developer,Ancient Long Imprisoned Evil<br />
 					</p>
 				</header>
 				<footer>
@@ -184,7 +184,7 @@
 					<section id="footer">
 						<div class="container">
 							<ul class="copyright">
-								<li>&copy; DylanBrutonPublicPortfolio. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; DanielleBrutonPublicPortfolio. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</section>
