--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/avatar.png" alt="" /></span>
+					<span class="image avatar"><img src="images/Profile.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Danielle Bruton</a></h1>
 					<p>Gamer,Transgender,Developer,Ancient Long Imprisoned Evil<br />
 					</p>
