fixing got the touch

--- a/index.html
+++ b/index.html
@@ -109,13 +109,13 @@
   													<h4>Unity:Got The Touch</h4>
   													<iframe src="https://www.youtube.com/embed/3clrsAo8wzk" width="420" height="340" ></iframe>
 
-													<p>During my internship for my eduction at TriOS, i worked for my collegue and teacher Richard Als,as well as another intern on a mobile title called Got The Touch, launched on both IOS and android. The goal of the game is to keep up with the speed and tap corresponding circles that match what the game indicates. The game was an excellent title that i learned much from, serving as a crash course in the game development life cycle from design to post production.</p>
-													<div>
+													<p>During my internship for my eduction at TriOS, i worked for my collegue and teacher Richard Als,as well as another intern on a mobile title called Got The Touch, launched on both IOS and android(it has since been taken off the appstore, in contacts with Richard as to what occured). The goal of the game is to keep up with the speed and tap corresponding circles that match what the game indicates. The game was an excellent title that i learned much from, serving as a crash course in the game development life cycle from design to post production.</p>
+													<!--<div>
 														<a href='https://play.google.com/store/apps/details?id=com.PiWaveInc.GottheTouch&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img style="padding: 0 5px;"height="35%" width="35%" alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png'/></a><br>
-													<!--Google Play and the Google Play logo are trademarks of Google LLC.-->
+													Google Play and the Google Play logo are trademarks of Google LLC.
 
 													<a href="https://itunes.apple.com/us/app/got-the-touch/id1457119981?mt=8"><img style="margin-left:10px;"  height="28%" width="28%"  alt='Get it on the IOS App Store' src='https://linkmaker.itunes.apple.com/en-us/badge-lrg.svg?releaseDate=2019-03-26&kind=iossoftware&bubble=ios_apps'/></a>
-													</div>
+													</div>-->
 
 
   												</th> 
